# pubg-api

./: Cargo.toml  LICENSE  README.md
examples/: status.rs
src/: json_uuid.rs  lib.rs  models.rs
src/events/: mod.rs  pc.rs  xbox.rs
src/status/: mod.rs
src/telemetry/: attack.rs  common.rs  damage.rs  item.rs  mod.rs  vehicle.rs
