[package]
name = "pubg-api"
version = "0.1.0"
authors = ["George Marshall <george@georgemarshall.name>"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.1"
json-api = "0.4"
hyper = "0.11"
hyper-tls = "0.1"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tokio-core = "0.1"
uuid = { version = "0.6", features = ["serde"] }

[dev-dependencies]
dotenv = "0.11"
env_logger = "0.5"
